# civic-auth-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
civic_auth/: __init__.py  auth.py  exceptions.py  storage.py  types.py  utils.py
civic_auth/integrations/: __init__.py  django.py  fastapi.py  flask.py
examples/django/: README.md  manage.py
examples/django/civic_app/: civic_auth_django.py  urls.py  views.py
examples/django/civic_app/templates/: admin.html
examples/django/civic_example/: settings.py  urls.py  wsgi.py
examples/fastapi/: app.py  civic_auth_fastapi.py
examples/flask/: app.py  civic_auth_flask.py
tests/: __init__.py  conftest.py  django_settings.py  test_auth.py
tests/integrations/: test_django.py  test_fastapi.py  test_flask.py
